# treesitter-types

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  cliff.toml  justfile  release.toml
.github/: CODEOWNERS  dependabot.yml
.github/rulesets/: master.json
.github/workflows/: ci.yml  dependabot-codegen.yml  publish.yml  sync-rulesets.yml
crates/treesitter-types/: Cargo.toml
crates/treesitter-types-bash/: Cargo.toml
crates/treesitter-types-bash/src/: generated.rs  lib.rs
crates/treesitter-types-c/: Cargo.toml
crates/treesitter-types-c-sharp/: Cargo.toml
crates/treesitter-types-c-sharp/src/: generated.rs  lib.rs
crates/treesitter-types-c/src/: generated.rs  lib.rs
crates/treesitter-types-cli/: Cargo.toml
crates/treesitter-types-cli/src/: main.rs
crates/treesitter-types-codegen-runner/: Cargo.toml
crates/treesitter-types-codegen-runner/src/: main.rs
crates/treesitter-types-cpp/: Cargo.toml
crates/treesitter-types-cpp/src/: generated.rs  lib.rs
crates/treesitter-types-css/: Cargo.toml
crates/treesitter-types-css/src/: generated.rs  lib.rs
crates/treesitter-types-elixir/: Cargo.toml
crates/treesitter-types-elixir/src/: generated.rs  lib.rs
crates/treesitter-types-go/: Cargo.toml
crates/treesitter-types-go/src/: generated.rs  lib.rs
crates/treesitter-types-haskell/: Cargo.toml
crates/treesitter-types-haskell/src/: generated.rs  lib.rs
crates/treesitter-types-html/: Cargo.toml
crates/treesitter-types-html/src/: generated.rs  lib.rs
crates/treesitter-types-java/: Cargo.toml
crates/treesitter-types-java/src/: generated.rs  lib.rs
crates/treesitter-types-javascript/: Cargo.toml
crates/treesitter-types-javascript/src/: generated.rs  lib.rs
crates/treesitter-types-json/: Cargo.toml
crates/treesitter-types-json/src/: generated.rs  lib.rs
crates/treesitter-types-lua/: Cargo.toml
crates/treesitter-types-lua/src/: generated.rs  lib.rs
crates/treesitter-types-macros/: Cargo.toml
crates/treesitter-types-macros/src/: lib.rs
crates/treesitter-types-markdown/: Cargo.toml
crates/treesitter-types-markdown/src/: generated.rs  lib.rs
crates/treesitter-types-ocaml/: Cargo.toml
crates/treesitter-types-ocaml/src/: generated.rs  lib.rs
crates/treesitter-types-php/: Cargo.toml
crates/treesitter-types-php/src/: generated.rs  lib.rs
crates/treesitter-types-python/: Cargo.toml
crates/treesitter-types-python/src/: generated.rs  lib.rs
crates/treesitter-types-regex/: Cargo.toml
crates/treesitter-types-regex/src/: generated.rs  lib.rs
crates/treesitter-types-ruby/: Cargo.toml
crates/treesitter-types-ruby/src/: generated.rs  lib.rs
crates/treesitter-types-rust/: Cargo.toml
crates/treesitter-types-rust/src/: generated.rs  lib.rs
crates/treesitter-types-scala/: Cargo.toml
crates/treesitter-types-scala/src/: generated.rs  lib.rs
crates/treesitter-types-swift/: Cargo.toml
crates/treesitter-types-swift/src/: generated.rs  lib.rs
crates/treesitter-types-toml/: Cargo.toml
crates/treesitter-types-toml/src/: generated.rs  lib.rs
crates/treesitter-types-typescript/: Cargo.toml
crates/treesitter-types-typescript/src/: generated.rs  lib.rs
crates/treesitter-types-yaml/: Cargo.toml
crates/treesitter-types-yaml/src/: generated.rs  lib.rs
crates/treesitter-types/src/: lib.rs
crates/treesitter-types/src/codegen/: emitter.rs  grammar_ir.rs  mod.rs  name_mangler.rs  type_mapper.rs
crates/treesitter-types/src/runtime/: error.rs  from_node.rs  mod.rs  span.rs
crates/treesitter-types/tests/: codegen_test.rs
crates/treesitter-types/tests/fixtures/: simple_node_types.json
script/: test-parse-go-language-repository  test-parse-java-language-repository  test-parse-javascript-language-repository  test-parse-rust-language-repository  test-parse-typescript-language-repository
tests/go/: Cargo.toml
tests/go/src/: lib.rs
tests/java/: Cargo.toml
tests/java/src/: lib.rs
tests/javascript/: Cargo.toml  build.rs
tests/javascript/src/: lib.rs
tests/roundtrip/: Cargo.toml
tests/roundtrip/fixtures/: go.go  java.java  javascript.js  rust.rs  typescript.ts
tests/roundtrip/src/: lib.rs
tests/roundtrip/tests/: roundtrip.rs
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
tests/typescript/: Cargo.toml
tests/typescript/src/: lib.rs
