[workspace]
resolver = "2"
members = [
    "crates/treesitter-types",
    "crates/treesitter-types-macros",
    "crates/treesitter-types-cli",
    "crates/treesitter-types-go",
    "crates/treesitter-types-java",
    "crates/treesitter-types-javascript",
    "crates/treesitter-types-rust",
    "crates/treesitter-types-typescript",
    "tests/roundtrip",
]
default-members = [
    "crates/treesitter-types",
    "crates/treesitter-types-macros",
]
