[workspace]
resolver = "2"
members = [
    "crates/treesitter-types",
    "crates/treesitter-types-macros",
    "crates/treesitter-types-cli",
    "crates/treesitter-types-codegen-runner",
    "crates/treesitter-types-bash",
    "crates/treesitter-types-c",
    "crates/treesitter-types-c-sharp",
    "crates/treesitter-types-cpp",
    "crates/treesitter-types-css",
    "crates/treesitter-types-elixir",
    "crates/treesitter-types-go",
    "crates/treesitter-types-haskell",
    "crates/treesitter-types-html",
    "crates/treesitter-types-java",
    "crates/treesitter-types-javascript",
    "crates/treesitter-types-json",
    "crates/treesitter-types-lua",
    "crates/treesitter-types-markdown",
    "crates/treesitter-types-ocaml",
    "crates/treesitter-types-php",
    "crates/treesitter-types-python",
    "crates/treesitter-types-regex",
    "crates/treesitter-types-ruby",
    "crates/treesitter-types-rust",
    "crates/treesitter-types-scala",
    "crates/treesitter-types-swift",
    "crates/treesitter-types-toml",
    "crates/treesitter-types-typescript",
    "crates/treesitter-types-yaml",
    "tests/roundtrip",
]
default-members = [
    "crates/treesitter-types",
    "crates/treesitter-types-macros",
]
