[package]
name = "treesitter-types-c"
version = "0.1.2"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Pre-generated strongly-typed AST types for C (tree-sitter-c)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "c", "ast", "parser", "codegen"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
treesitter-types = { version = "0.1.2", path = "../treesitter-types" }
tree-sitter = "0.26"
tree-sitter-c = "0.24"

