[package]
name = "treesitter-types-codegen-runner"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
treesitter-types = { path = "../treesitter-types" }

# Grammar crates (source of NODE_TYPES constants)
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-regex = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
