[package]
name = "treesitter-types-css"
version = "0.1.0"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Pre-generated strongly-typed AST types for CSS (tree-sitter-css)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "css", "ast", "parser", "codegen"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
treesitter-types = { version = "0.1.0", path = "../treesitter-types" }
tree-sitter = "0.25"

[dev-dependencies]
tree-sitter-css = "0.25"
