[package]
name = "treesitter-types-macros"
version = "0.1.0"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Proc-macro companion for treesitter-types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"

[lib]
proc-macro = true

[dependencies]
treesitter-types = { path = "../treesitter-types" }
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
