[package]
name = "treesitter-types-macros"
version = "0.1.2"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Proc-macro companion for treesitter-types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "parser", "codegen", "ast", "proc-macro"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
treesitter-types = { version = "0.1.2", path = "../treesitter-types" }
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
