[package]
name = "treesitter-types-python"
version = "0.1.1"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Pre-generated strongly-typed AST types for Python (tree-sitter-python)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "python", "ast", "parser", "codegen"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
treesitter-types = { version = "0.1.1", path = "../treesitter-types" }
tree-sitter = "0.26"

[dev-dependencies]
tree-sitter-python = "0.25"
