[package]
name = "treesitter-types-rust"
version = "0.1.1"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Pre-generated strongly-typed AST types for Rust (tree-sitter-rust)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "rust", "ast", "parser", "codegen"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
treesitter-types = { version = "0.1.1", path = "../treesitter-types" }
tree-sitter = "0.25"

[dev-dependencies]
tree-sitter-rust = "0.24"
