[package]
name = "treesitter-types-swift"
version = "0.2.0"
authors = ["Jeroen Vervaeke <treesitter-types.uvyaj@simplelogin.com>"]
edition = "2021"
rust-version = "1.77"
description = "Pre-generated strongly-typed AST types for Swift (tree-sitter-swift)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeroenvervaeke/treesitter-types"
keywords = ["tree-sitter", "swift", "ast", "parser", "codegen"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
treesitter-types = { version = "0.2.0", path = "../treesitter-types" }
tree-sitter-swift = "0.7"

